--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# IDE
+.idea
+.vs
+.vscode
+
+# Mac OS
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -59,3 +67,7 @@ typings/
 
 # next.js build output
 .next
+
+# Local
+pifu.xml
+pifu.json
