--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test-offline": "standard",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm i",
     "standard-fix": "standard --fix",
-    "convert": "node utils/convert-xml-to-json.js"
+    "convert": "node utils/convert-xml-to-json.js",
+    "extract:groups": "node utils/extract-groups.js"
   },
   "repository": {
     "type": "git",
