--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "standard-fix": "standard --fix",
     "convert": "node utils/convert-xml-to-json.js",
     "extract:groups": "node utils/extract-groups.js",
+    "extract:groups:basisgrupper": "node utils/extract-groups-basisgrupper.js",
     "extract:persons": "node utils/extract-persons.js"
   },
   "repository": {
