--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "extract:groups": "node utils/extract-groups.js",
     "extract:groups:basisgrupper": "node utils/extract-groups-basisgrupper.js",
     "extract:groups:undervisningsgrupper": "node utils/extract-groups-undervisningsgrupper.js",
+    "extract:groups:faggrupper": "node utils/extract-groups-faggrupper.js",
     "extract:persons": "node utils/extract-persons.js"
   },
   "repository": {
