Implements students and teachers

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "extract:groups:undervisningsgrupper": "node utils/extract-groups-undervisningsgrupper.js",
     "extract:groups:faggrupper": "node utils/extract-groups-faggrupper.js",
     "extract:groups:skoler": "node utils/extract-groups-skoler.js",
-    "extract:persons": "node utils/extract-persons.js"
+    "extract:persons": "node utils/extract-persons.js",
+    "extract:persons:students": "node utils/extract-persons-students.js",
+    "extract:persons:teachers": "node utils/extract-persons-teachers.js"
   },
   "repository": {
     "type": "git",
