Implements merge groups

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ basisgrupper.json
 undervisningsgrupper.json
 faggrupper.json
 memberships.json
+merged-groups.json
 skoler.json
 skoleeier.json
 kontaktlarergrupper.json
