--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "8.1.0",
     "fast-xml-parser": "3.12.20",
     "mongodb": "3.3.2",
+    "mssql": "5.1.0",
     "then-sleep": "1.0.1"
   }
 }
