--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
   },
   "dependencies": {
     "dotenv": "8.2.0",
-    "fast-xml-parser": "3.16.0",
-    "mongodb": "3.5.6",
-    "mssql": "^6.0.0",
+    "fast-xml-parser": "3.17.2",
+    "mongodb": "3.5.7",
+    "mssql": "6.2.0",
     "then-sleep": "1.0.1"
   }
 }
