--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "dotenv": "8.2.0",
     "fast-xml-parser": "3.17.2",
     "mongodb": "3.5.7",
-    "mssql": "6.2.0",
-    "then-sleep": "1.0.1"
+    "mssql": "6.2.0"
   }
 }
