--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "extract:all": "npm run extract:memberships && npm run extract:groups && npm run extract:groups:skoleeier && npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:faggrupper && npm run merge:groups && npm run extract:vigobasUsers && npm run extract:persons && npm run extract:persons:students && npm run extract:persons:teachers",
     "export": "node utils/export-to-database.js",
     "start": "npm run convert && npm run extract:all && npm run export",
-    "start:dryrun": "npm run convert && npm run extract:all",
+    "start:dryrun": "npm run convert && npm run extract:all && node utils/dryrun.js",
     "merge:groups": "node utils/merge-groups.js"
   },
   "repository": {
