--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "extract:persons:teachers": "node utils/extract-persons-teachers.js",
     "extract:vigobasUsers": "node utils/extract-vigobas-users.js",
     "extract:all": "npm run extract:memberships && npm run extract:groups && npm run extract:groups:skoleeier && npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:faggrupper && npm run merge:groups && npm run extract:vigobasUsers && npm run extract:persons && npm run extract:persons:students && npm run extract:persons:teachers",
-    "export": "node utils/export-to-database.js",
-    "start": "npm run convert && npm run extract:all && npm run export",
+    "export:delta": "node utils/export-to-database-delta.js",
+    "export:full": "node utils/export-to-database-full.js",
+    "start": "npm run convert && npm run extract:all && npm run export:delta",
+    "start:full": "npm run convert && npm run extract:all && npm run export:full",
     "start:dryrun": "npm run convert && npm run extract:all && node utils/dryrun.js",
     "merge:groups": "node utils/merge-groups.js"
   },
