Add method to query and repack GREP data from UDIRs SparQL endpoint

--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "standard": "14.3.4"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "dotenv": "8.2.0",
     "fast-xml-parser": "3.17.4",
     "mongodb": "3.6.2",
-    "mssql": "6.2.3"
+    "mssql": "6.2.3",
+    "qs": "6.5.2"
   }
 }
