--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "extract:groups:undervisningsgrupper": "node utils/extract-groups-undervisningsgrupper.js",
     "extract:groups:faggrupper": "node utils/extract-groups-faggrupper.js",
     "extract:groups:kontaktlarergrupper": "node utils/extract-groups-kontaktlarergrupper.js",
+    "extract:groups:programomraader": "node utils/extract-groups-programomraader.js",
+    "extract:groups:utdanningsprogrammer": "node utils/extract-groups-utdanningsprogrammer.js",
     "extract:groups:skoler": "node utils/extract-groups-skoler.js",
     "extract:groups:skoleeier": "node utils/extract-groups-skoleeier.js",
     "merge:groups": "node utils/merge-groups.js",
@@ -24,7 +26,7 @@
     "extract:grep": "node utils/extract-grep-data.js",
     "extract:vigobas": "node utils/extract-vigobas-users.js",
     "extract:export": "node utils/extract-export-data.js",
-    "extract:all": "npm run extract:memberships && npm run extract:groups && npm run extract:groups:skoleeier && npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:faggrupper && npm run merge:groups && npm run extract:vigobas && npm run extract:grep && npm run extract:persons && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
+    "extract:all": "npm run extract:memberships && npm run extract:groups && npm run extract:groups:skoleeier && npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:programomraader && npm run extract:groups:utdanningsprogrammer && npm run extract:groups:faggrupper && npm run merge:groups && npm run extract:vigobas && npm run extract:grep && npm run extract:persons && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
     "export:delta": "node utils/export-to-database-delta.js",
     "export:full": "node utils/export-to-database-full.js",
     "start": "npm run convert && npm run extract:all && npm run export:delta",
