--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "extract:grep": "node utils/extract-grep-data.js",
     "extract:vigobas": "node utils/extract-vigobas-users.js",
     "extract:export": "node utils/extract-export-data.js",
-    "extract:all": "npm run extract:memberships && npm run extract:groups && npm run extract:groups:skoleeier && npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:programomraader && npm run extract:groups:utdanningsprogrammer && npm run extract:groups:faggrupper && npm run merge:groups && npm run extract:vigobas && npm run extract:grep && npm run extract:persons && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
+    "extract:all": "npm run extract:grep && npm run extract:memberships && npm run extract:groups && npm run extract:groups:skoleeier && npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:programomraader && npm run extract:groups:utdanningsprogrammer && npm run extract:groups:faggrupper && npm run merge:groups && npm run extract:vigobas && npm run extract:persons && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
     "export:delta": "node utils/export-to-database-delta.js",
     "export:full": "node utils/export-to-database-full.js",
     "start": "npm run convert && npm run extract:all && npm run export:delta",
