Ignorer trinn.json

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ merged-groups.json
 skoler.json
 skoleeier.json
 kontaktlarergrupper.json
+trinn.json
 usernames.json
 vigobasUsers.json
 override.json
