--- a/package.json
+++ b/package.json
@@ -52,15 +52,14 @@
     "node": ">=14.3.0"
   },
   "devDependencies": {
-    "ava": "3.15.0",
     "standard": "16.0.3"
   },
   "dependencies": {
+    "@vtfk/logger": "2.5.2",
     "axios": "0.21.1",
     "dotenv": "10.0.0",
-    "fast-xml-parser": "3.17.6",
     "mongodb": "3.6.9",
-    "mssql": "6.3.1",
-    "qs": "6.10.1"
+    "qs": "6.10.1",
+    "vtfk-schools-info": "3.1.0"
   }
 }
