--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "refresh": "rm -rf node_modules && rm package-lock.json && npm i",
     "standard-fix": "standard --fix",
     "vis:files": "node utils/get-vis-files.js",
-    "extract:grep:1": "node utils/extract-grep-data.js",
-    "extract:grep": "echo HeltÆrlig",
+    "extract:grep": "node utils/extract-grep-data.js",
     "extract:groups:skoler": "node utils/extract-groups-skoler.js",
     "extract:groups:basisgrupper": "node utils/extract-groups-basisgrupper.js",
     "extract:groups:undervisningsgrupper": "node utils/extract-groups-undervisningsgrupper.js",
