--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "extract:persons:students": "node utils/extract-persons-students.js",
     "extract:persons:teachers": "node utils/extract-persons-teachers.js",
     "extract:export": "node utils/extract-export-data.js",
-    "extract:all": "npm run extract:grep && npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:programomraader && npm run extract:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
+    "extract:all": "npm run extract:grep && npm run extract:local",
     "extract:local": "npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:programomraader && npm run extract:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
     "export:delta": "node utils/export-to-database-delta.js",
     "export:full": "node utils/export-to-database-full.js",
