Linked utdanningsprogram from eduPersonEntitlement with utdanningsprogram :thumbsup:

--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "extract:groups:undervisningsgrupper": "node utils/extract-groups-undervisningsgrupper.js",
     "extract:groups:kontaktlarergrupper": "node utils/extract-groups-kontaktlarergrupper.js",
     "extract:groups:utdanningsprogrammer": "node utils/extract-groups-utdanningsprogrammer.js",
+    "link:groups:utdanningsprogrammer": "node utils/link-groups-utdanningsprogrammer.js",
     "merge:groups": "node utils/merge-groups.js",
     "extract:persons:students": "node utils/extract-persons-students.js",
     "extract:persons:teachers": "node utils/extract-persons-teachers.js",
     "extract:export": "node utils/extract-export-data.js",
     "extract:all": "npm run extract:grep && npm run extract:local",
-    "extract:local": "npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
+    "extract:local": "npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:utdanningsprogrammer && npm run link:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
     "export:delta": "node utils/export-to-database-delta.js",
     "export:full": "node utils/export-to-database-full.js",
     "start": "npm run vis:files && npm run extract:all && npm run export:delta",
