--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "node": ">=14.3.0"
   },
   "devDependencies": {
+    "colors": "1.4.0",
+    "figures": "3.2.0",
+    "inquirer": "8.2.0",
     "standard": "16.0.3"
   },
   "dependencies": {
