--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "merge:groups": "node utils/merge-groups.js",
     "extract:persons:students": "node utils/extract-persons-students.js",
     "extract:persons:teachers": "node utils/extract-persons-teachers.js",
+    "add:extras": "node utils/add-extras.js",
     "extract:export": "node utils/extract-export-data.js",
     "extract:all": "npm run extract:grep && npm run extract:local",
-    "extract:local": "npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:utdanningsprogrammer && npm run link:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export",
+    "extract:local": "npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:utdanningsprogrammer && npm run link:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export && npm run add:extras",
     "export:delta": "node utils/export-to-database-delta.js",
     "export:full": "node utils/export-to-database-full.js",
     "start": "npm run vis:files && npm run extract:all && npm run export:delta",
