--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "refresh": "rm -rf node_modules && rm package-lock.json && npm i",
     "standard-fix": "standard --fix",
     "vis:files": "node utils/get-vis-files.js",
+    "add:export:timestamps": "node utils/add-export-timestamps.js",
     "extract:grep": "node utils/extract-grep-data.js",
     "extract:groups:skoler": "node utils/extract-groups-skoler.js",
     "extract:groups:basisgrupper": "node utils/extract-groups-basisgrupper.js",
@@ -22,7 +23,7 @@
     "add:extras": "node utils/add-extras.js",
     "extract:export": "node utils/extract-export-data.js",
     "extract:all": "npm run extract:grep && npm run extract:local",
-    "extract:local": "npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:utdanningsprogrammer && npm run link:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export && npm run add:extras",
+    "extract:local": "npm run extract:groups:skoler && npm run extract:groups:basisgrupper && npm run extract:groups:undervisningsgrupper && npm run extract:groups:kontaktlarergrupper && npm run extract:groups:utdanningsprogrammer && npm run link:groups:utdanningsprogrammer && npm run merge:groups && npm run extract:persons:students && npm run extract:persons:teachers && npm run extract:export && npm run add:extras && npm run add:export:timestamps",
     "export:delta": "node utils/export-to-database-delta.js",
     "export:full": "node utils/export-to-database-full.js",
     "export:full:rename": "node utils/export-to-database-full.js --rename",
