--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "axios": "0.24.0",
     "dotenv": "10.0.0",
     "mongodb": "3.7.3",
-    "vtfk-schools-info": "3.1.1",
+    "vtfk-schools-info": "^3.4.0",
     "yargs": "17.5.1"
   }
 }
